November 20th, 2017
- James: Finished keyboard and timer interrupt code, handling of specific codes with respect to game logic.
- David: Initial drawing code in c

November 21st, 2017
- James: After troubles in the lab I got the keyboard code working in the
simulator.

-November 25th, 2017
- James: Player movement left/right works in simulator and is bounded to
playing field. Player firing works, placeholder for enemy fire. Added collision between enemy bullets and player, and basic
collision between enemy bullets and shield.